[package]
name = "crux"
version = "0.1.0"
description = "Parts of Crux re-imagined in Rust"
keywords = ["database", "bitemp", "kafka", "rocksdb"]
homepage = "https://github.com/juxt/crux"
readme = "README.md"
authors = ["Håkan Råberg <hak@juxt.pro>"]
license = "MIT"
edition = "2018"

[lib]
crate-type=["rlib", "cdylib"]

[dependencies]
croaring = "0.4"
edn = "0.3"
env_logger = "0.7"
futures = "0.1"
log = "0.4"
rdkafka = "0.21"
rocksdb = "0.12"
sha-1 = "0.8"

[dev-dependencies]
env_logger = "0.7"
