[package]
name = "crux"
version = "0.1.0"
description = "Parts of Crux re-imagined in Rust"
keywords = ["database", "bitemp", "kafka", "rocksdb", "lmdb", "arrow", "datalog"]
repository = "https://github.com/juxt/crux-rnd"
homepage = "https://github.com/juxt/crux-rnd"
readme = "README.md"
authors = ["Håkan Råberg <hak@juxt.pro>"]
license = "MIT"
edition = "2018"

[lib]
crate-type=["rlib", "cdylib"]

[dependencies]
arrow = { git = "https://github.com/apache/arrow" }
chrono = "0.4"
croaring = "0.4"
edn = "0.3"
futures = "0.1"
hex = "0.4"
lmdb = "0.8"
log = "0.4"
rdkafka = "0.21"
rocksdb = { version = "0.12", default-features = false }
serde_json = "1.0"
sha-1 = "0.8"

[dev-dependencies]
env_logger = "0.7"
